--- a/style/modal.css
+++ b/style/modal.css
@@ -15,7 +15,7 @@
 .modal {
     display: none; 
     position: fixed; 
-/*    z-index: 100; */
+    z-index: 9999; 
     padding: 10px;
     padding-top: 100px; 
     left: 0;
