--- a/templates/tool_upload_file.html
+++ b/templates/tool_upload_file.html
@@ -13,7 +13,7 @@
         <legend>Selecione o arquivo</legend>
         <div class="col">
                 <canvas id="cnvImg"></canvas>
-                <input  name="up_file" id="up_file" type="file" accept=".jpg,.jpeg,.png">  
+                <input  name="up_file" id="up_file" type="file" accept=".jpg,.jpeg,.png,.pdf,.avi">  
                 <button id="btnUpload"><span class="mdi mdi-content-save-check"></span>Salvar</button>
         </div>
     </fieldset>
