--- a/CDN/css/acervodigital.css
+++ b/CDN/css/acervodigital.css
@@ -6,6 +6,7 @@
 .content-item{
     display: flex;
     flex-direction: column;
+    gap: 5px;
     border: solid;
     padding: 10px;
     margin: 5px;
@@ -17,4 +18,34 @@
     flex-direction: row;    
     align-items: center;
     gap: 10px;
+}
+
+.img-board{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+
+.square-item{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    font-size : 0.9em;
+    overflow : hidden;
+    width : 200px;
+    height : 200px;
+    border: solid 1px rgba(100, 100, 100, 0);
+}
+
+.square-item *{
+    margin: 0;
+}
+
+.img-item{
+    object-fit: contain;    
+    max-height: 200px;
 }
