--- a/templates/tool_anexos.html
+++ b/templates/tool_anexos.html
@@ -17,6 +17,7 @@
             font-size: 2em;
             width: 200px;
             height: 200px;
+            overflow: hidden;
         }
      
         .square_frm:hover{
