--- a/templates/adm_itens.html
+++ b/templates/adm_itens.html
@@ -44,7 +44,7 @@
             for(let i=0; i<json.length;i++){
                 tbl.plot(json[i],'nome,acervo,cat','Upp,Upp,cha VCL=Veículo QDR=Quadro')
             }         
-        });
+        })
     }
 
     pageScreen.querySelector('#btnBusca').addEventListener('click',()=>{
@@ -56,13 +56,18 @@
     })
 
     pageScreen.querySelector('#tblItens').addEventListener('click',(e)=>{
-        try{
-            if(main_data.hasOwnProperty('adm_view_item')){
-                closeModal('adm_view_item')
-            }
-            data = e.target.parentNode.data
-            data != undefined ? openHTML('adm_view_item.html','pop-up',`Edição de dados - ${data.nome.toUpperCase()}`,data) : null
-       }catch{null}
+        data = e.target.parentNode.data
+        const params = new Object;
+            params.id_item = data.id
+            params.cat = data.cat
+        const myPromisse = queryDB(params,'ACE-3');
+        myPromisse.then((resolve)=>{
+            const json = JSON.parse(resolve)[0]
+            openHTML('adm_view_item.html','pop-up',`Edição de dados - ${json.nome.toUpperCase()}`,json)
+        });
+
+
+
     })
 
 </script>
